--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section class="fixed-container first-block" id="mslf">
     <div>
       <h1 class="text-center" id="greeting-text"> </h1>
-      <div class="text-center">Студентка 3 курса Университета ИТМО</div>
+      <div class="text-center">Студентка 4 курса Университета ИТМО</div>
       <div class="text-center">Направление "Программная инженерия"</div>
     </div>
   </section>
@@ -56,7 +56,7 @@
       <div class="service-3">
         <br>
         <br>
-        <center><b>Владею основами<br>Машинного обучения</b></center>
+        <center><b>Владею основами<br>Машинного обучения и Нейронных сетей</b></center>
       </div>
     </div>
   </section>
@@ -84,6 +84,14 @@
         <div class="prefer-container">
           <div class="prefer-3">
             Веб-разработка
+          </div>
+
+        </div>
+      </li>
+      <li>
+        <div class="prefer-container">
+          <div class="prefer-4">
+            Программная инженерия
           </div>
 
         </div>
